--- a/ui/loginscr.ui
+++ b/ui/loginscr.ui
@@ -257,6 +257,24 @@ font: 75 15pt &quot;Calibri&quot;;</string>
      <string>password</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="forgotpasswordButton">
+    <property name="geometry">
+     <rect>
+      <x>920</x>
+      <y>620</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 25 15pt &quot;Calibri&quot;;
+color: rgb(222,24,24);
+background-color: transparent</string>
+    </property>
+    <property name="text">
+     <string>forgot password?</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
