--- a/ui/addTruckUtil.ui
+++ b/ui/addTruckUtil.ui
@@ -45,9 +45,9 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>50</y>
-      <width>181</width>
-      <height>91</height>
+      <y>40</y>
+      <width>221</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -63,8 +63,8 @@ color: white;</string>
      <rect>
       <x>50</x>
       <y>140</y>
-      <width>301</width>
-      <height>41</height>
+      <width>361</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -78,8 +78,8 @@ color: white</string>
    <widget class="QPushButton" name="backButton">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>130</y>
+      <x>340</x>
+      <y>60</y>
       <width>51</width>
       <height>51</height>
      </rect>
@@ -100,7 +100,7 @@ background-color: &quot;#222222&quot;
      <string>&lt;-</string>
     </property>
    </widget>
-   <widget class="QWidget" name="viewEmployeeWidget" native="true">
+   <widget class="QWidget" name="resetPasswordWidget_2" native="true">
     <property name="geometry">
      <rect>
       <x>470</x>
@@ -128,30 +128,30 @@ color: rgb(222,24,24);
 </string>
      </property>
      <property name="text">
-      <string>View Employee Util</string>
+      <string>Add Truck Util</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_17">
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>100</y>
-       <width>421</width>
-       <height>61</height>
+       <y>120</y>
+       <width>441</width>
+       <height>81</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">font: 25 13pt &quot;Calibri&quot;;</string>
+      <string notr="true">font: 25 18pt &quot;Calibri&quot;;</string>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter the details of the employee you wish&lt;br/&gt;to view. Fill any field to search&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter the details of the truck &lt;br/&gt;you wish to add&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_11">
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>170</y>
+       <y>230</y>
        <width>121</width>
        <height>16</height>
       </rect>
@@ -161,14 +161,14 @@ color: rgb(222,24,24);
 font: 25 14pt &quot;Calibri&quot;;</string>
      </property>
      <property name="text">
-      <string>Name</string>
+      <string>Driver's name</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="nameLineEdit">
+    <widget class="QLineEdit" name="driverNameLineEdit">
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>190</y>
+       <y>250</y>
        <width>381</width>
        <height>41</height>
       </rect>
@@ -193,12 +193,12 @@ font: 25 12pt &quot;Calibri&quot;;
 color: #808080</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="searchButton">
+    <widget class="QPushButton" name="CreateTruckButton">
      <property name="geometry">
       <rect>
-       <x>540</x>
-       <y>210</y>
-       <width>191</width>
+       <x>490</x>
+       <y>640</y>
+       <width>301</width>
        <height>61</height>
       </rect>
      </property>
@@ -217,14 +217,14 @@ border-color: rgb(222,24,24)
 }</string>
      </property>
      <property name="text">
-      <string>Search</string>
+      <string>Create Truck</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="IDLineEdit">
+    <widget class="QLineEdit" name="driverNumberLineEdit">
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>260</y>
+       <y>330</y>
        <width>381</width>
        <height>41</height>
       </rect>
@@ -253,7 +253,53 @@ color: #808080</string>
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>240</y>
+       <y>310</y>
+       <width>161</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(222,24,24);
+font: 25 14pt &quot;Calibri&quot;;</string>
+     </property>
+     <property name="text">
+      <string>Driver's Mobile No</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="locationLineEdit">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>410</y>
+       <width>381</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Calibri</family>
+       <pointsize>12</pointsize>
+       <weight>3</weight>
+       <italic>false</italic>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: #fff3f3;
+border-style: outset;
+border-width: 2px;
+border-radius: 15px;
+border-color: #fff3f3;
+padding-left: 10px;
+font: 25 12pt &quot;Calibri&quot;;
+color: #808080</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_13">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>390</y>
        <width>121</width>
        <height>16</height>
       </rect>
@@ -263,41 +309,53 @@ color: #808080</string>
 font: 25 14pt &quot;Calibri&quot;;</string>
      </property>
      <property name="text">
-      <string>Id</string>
+      <string>Location</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_4">
+    <widget class="QLineEdit" name="numberPlateLineEdit">
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>350</y>
-       <width>301</width>
-       <height>51</height>
+       <y>490</y>
+       <width>381</width>
+       <height>41</height>
       </rect>
      </property>
-     <property name="styleSheet">
-      <string notr="true">font: 75 24pt &quot;League Spartan&quot;;
-color: rgb(222,24,24);
-</string>
+     <property name="font">
+      <font>
+       <family>Calibri</family>
+       <pointsize>12</pointsize>
+       <weight>3</weight>
+       <italic>false</italic>
+       <bold>false</bold>
+      </font>
      </property>
-     <property name="text">
-      <string>Employee details:</string>
+     <property name="styleSheet">
+      <string notr="true">background-color: #fff3f3;
+border-style: outset;
+border-width: 2px;
+border-radius: 15px;
+border-color: #fff3f3;
+padding-left: 10px;
+font: 25 12pt &quot;Calibri&quot;;
+color: #808080</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_5">
+    <widget class="QLabel" name="label_14">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>420</y>
-       <width>461</width>
-       <height>211</height>
+       <x>70</x>
+       <y>470</y>
+       <width>121</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">font: 25 15pt &quot;Calibri&quot;;</string>
+      <string notr="true">color: rgb(222,24,24);
+font: 25 14pt &quot;Calibri&quot;;</string>
      </property>
      <property name="text">
-      <string>This text box will show the details of &lt;br&gt;employees if found</string>
+      <string>NumberPlate</string>
      </property>
     </widget>
    </widget>
